name:                hs-scheme-parser
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/christof/hs-scheme-parser#readme
license:             MIT
license-file:        LICENSE
author:              Christof Sirk
maintainer:          christof.sirk@gmail.com
copyright:           2018 Christof Sirk
category:            Parser
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable simple_parser
  hs-source-dirs:      .
  main-is:             parser.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
